pytest 学习跟练记录

--- a/data/data.yaml
+++ b/data/data.yaml
@@ -60,3 +60,5 @@ mobile_belong_get:
   # 手机号，appkey
   - [ 13456755448, 0c818521d38759e1 ]
   - [ 13400000000, 0c818521d38759e1 ]
+
+json_data: {title: foo, body: bar, userId: 1}
