--- a/config/settings.ini
+++ b/config/settings.ini
@@ -1,3 +1,15 @@
 [host]
-api_sit_url = http://api.binstd.com
-post_url = http://jsonplaceholder.typicode.com
+; api_sit_url = http://api.binstd.com
+; post_url = http://jsonplaceholder.typicode.com
+
+api_sit_url = http://admin.5istudy.online
+
+
+[mysql]
+MYSQL_HOST=47.110.151.136
+MYSQL_PORT=3306
+MYSQL_USER=vue_shop
+MYSQL_PASSWD=5istudy_shop
+MYSQL_DB=vue_shop
+
+
