--- a/data/data.yaml
+++ b/data/data.yaml
@@ -70,3 +70,7 @@ mobile_belong_get:
 json_data: {title: foo, body: bar, userId: 1}
 
 test_register: { mobile: 13066807785 }
+
+user_login:
+  # 手机号， 密码
+  - [ 13066807786, 123456 ]
