--- a/pytest.ini
+++ b/pytest.ini
@@ -5,4 +5,4 @@ markers=
     test:测试环境
     pro:生产环境
 
-addopts = -vs --alluredir ./report
+addopts =-q --reruns 1 --reruns-delay 3 --alluredir ./report
