--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ pyPEG2==2.15.2
 pypinyin==0.49.0
 pytest==7.3.2
 pytest-ordering==0.6
+pytest-rerunfailures==10.2
 python-dateutil==2.8.2
 pytz==2023.3
 PyYAML==6.0
